# ESETScraperService

./: .gitignore  Nod32Scraper.session  Nod32Scraper.session-journal  README.md  __main__.py  config.yml  pyproject.toml
clients/: BaseClient.py  DMTelegramClient.py  TGClient.py  __init__.py
containers/: ApplicationContainer.py  __init__.py
core/interfaces/: IClient.py  ILogService.py  IScraper.py  IScraperService.py  IService.py  __init__.py
core/models/: BaseEntity.py  CredentialModel.py  CredentialRecordDTO.py  LogMessageModel.py  __init__.py
core/models/configuration/: TelegramClientCredentialModel.py  TelegramScraperConfiguration.py  __init__.py
core/models/enums/: LogLevel.py
core/utils/: ExitCode.py  __init__.py
exceptions/: NotFoundCredentialsException.py  __init__.py
exceptions/scraper/telegram/: MessageEmptyException.py  __init__.py
scrapers/: BaseScraper.py  TelegramScraper.py  __init__.py
services/: ScraperService.py  __init__.py
services/logging/: LoguruLoggingService.py
